# karly-sixtyfour

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  LICENSE  README.md  chess_funcs.cpp  chess_funcs.h  chess_moves_lut.cpp  chess_moves_lut.h  chess_pos.cpp  chess_pos.h  constants.h  makefile  mct.cpp  movegen.txt  node_move_list.cpp  node_move_list.h  perftpositions.txt  play.cpp  search.cpp  search.h  uci_input_log.txt  uciengine.cpp
src/: CMakeLists.txt  bitops.cpp  bitops.h  chess_funcs.cpp  chess_funcs.h  chess_moves_lut.cpp  chess_moves_lut.h  chess_pos.cpp  chess_pos.h  constants.h  k64config.h.in  main.cpp  mct.cpp  node_move_list.cpp  node_move_list.h  postree.cpp  postree.h  search.cpp  search.h  ttable.cpp  ttable.h  uci.cpp  uci.h  uciengine.cpp
test/: CMakeLists.txt  bitops_test.cpp  chess_funcs_test.cpp  gtest_main.cpp  move_gen_test.cpp  node_move_list_test.cpp  perft.cpp
test/unit_tests/: bitops_test.cpp  chess_funcs_test.cpp  chess_pos_test.cpp  node_move_list_test.cpp  ttable_test.cpp
